# iec61850lib

./: Cargo.toml  README.md  notes.md
.github/workflows/: ci.yml
benches/: goose_codec.rs  smv_decode.rs
docs/: benchmarking.md  client.md  goose.md  goose_simulator.md  goose_sniffer.md  smv.md
src/: client.rs  decode_basics.rs  decode_goose.rs  decode_smv.rs  encode_basics.rs  encode_goose.rs  encode_smv.rs  lib.rs  mms.rs  types.rs
tests/: decode_basics.rs  decode_goose.rs  encode_basics.rs  encode_goose.rs
