[package]
name = "iec_61850_lib"
version = "0.1.0"
authors = ["Jakob Vogelsang <jakob-vogelsang@posteo.de>"]
edition = "2021"

[dependencies.pnet]
version = "0.35.0"

# https://github.com/libpnet/libpnet/issues/481
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.8", features = [ "std" ] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
warp = "0.3"
tokio-tungstenite = "0.17"
futures-util = "0.3" 
serde_json = "1.0"
chrono = "0.4"
