[package]
name = "iec_61850"
version = "0.1.0"
authors = ["Jakob Vogelsang <jakob-vogelsang@posteo.de>"]
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rasn = "0.18"
hex = "0.4.3"
mms = { git = "https://github.com/OpenEnergyStack/iso9506-mms" }
async-trait = "0.1"
chrono = "0.4"
tokio = { version = "1", features = ["sync", "rt", "macros", "time"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio = { version = "1", features = ["macros", "rt"] }

[[bench]]
name = "goose_codec"
harness = false

[[bench]]
name = "smv_decode"
harness = false
